[tool.poetry]
name = "unsupervised ml-toolkit"
version = "0.1.0"
description = ""
authors = ["kavyal2 <kavya9140@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.6.0"
pyproj = "^3.7.0"
shapely = "^2.0.6"
geopandas = "^1.0.1"
tabulate = "^0.9.0"
mlxtend = "^0.23.3"
seaborn = "^0.13.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
